# reactGPU

./: .gitignore  CMakeLists.txt  README.md
examples/: simulatejacobs.py
python/: cellpolarisation.py  reactor.py  trajectory.py
src/: models.h  reactgpu.cc  reactgpu.cu  reactgpu.cuh  reactor.cc  reactor.cu  reactor.cuh  utilities.h
